// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots ui/shared/SideNav Navigation 1 Niveau 1`] = `
<nav
  className="fr-sidemenu flex !pr-4"
  data-test="SideNav"
>
  <div
    className="fr-sidemenu-wrapper w-full"
  >
    <ul
      className="fr-sidemenu__list"
    >
      <li
        className="fr-sidemnu__item fr-sidemenu__item--active"
      >
        <a
          aria-current={null}
          className="fr-sidemenu__link"
          href="/link 1"
          onClick={[Function]}
          target="_self"
        >
          Lien 1
        </a>
      </li>
      <li
        className="fr-sidemnu__item fr-sidemenu__item--active"
      >
        <a
          aria-current={null}
          className="fr-sidemenu__link"
          href="/link 2"
          onClick={[Function]}
          target="_self"
        >
          Lien 1
        </a>
      </li>
    </ul>
  </div>
</nav>
`;

exports[`Storyshots ui/shared/SideNav Navigation Avec Sections 1`] = `
<nav
  className="fr-sidemenu flex !pr-4"
  data-test="SideNav"
>
  <div
    className="fr-sidemenu-wrapper w-full"
  >
    <ul
      className="fr-sidemenu__list"
    >
      <li
        className="fr-sidemnu__item fr-sidemenu__item--active"
      >
        <a
          aria-current={null}
          className="fr-sidemenu__link"
          href="/lien 1"
          onClick={[Function]}
          target="_self"
        >
          Lien 1
        </a>
      </li>
      <li
        data-test="SideNav-section"
      >
        <div
          className="flex items-start w-full"
        >
          <div
            className="w-full fr-sidemnu__item fr-sidemenu__item--active"
          >
            <a
              aria-current={null}
              className="fr-sidemenu__link justify-between"
              data-test="SideNav-section-toggle-button"
              href="/lien 2"
              onClick={[Function]}
              target="_self"
              title="Ouvrir la section"
            >
              Section 1
              <div
                className="p-0.5 ml-2"
              >
                <span
                  className="fr-fi-arrow-right-s-line before:scale-75 before:transition-transform"
                />
              </div>
            </a>
          </div>
        </div>
      </li>
      <li
        data-test="SideNav-section"
      >
        <div
          className="flex items-start w-full"
        >
          <div
            className="w-full fr-sidemnu__item fr-sidemenu__item--active"
          >
            <a
              aria-current={null}
              className="fr-sidemenu__link justify-between"
              data-test="SideNav-section-toggle-button"
              href="/lien 5"
              onClick={[Function]}
              target="_self"
              title="Ouvrir la section"
            >
              Section 2
              <div
                className="p-0.5 ml-2"
              >
                <span
                  className="fr-fi-arrow-right-s-line before:scale-75 before:transition-transform"
                />
              </div>
            </a>
          </div>
        </div>
      </li>
      <li
        className="fr-sidemnu__item fr-sidemenu__item--active"
      >
        <a
          aria-current={null}
          className="fr-sidemenu__link"
          href="/lien 8"
          onClick={[Function]}
          target="_self"
        >
          Lien 4
        </a>
      </li>
    </ul>
  </div>
</nav>
`;
